--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             padding: 10px 20px;
             text-align: center;
         }
+        header img {
+            max-width: 150px; /* Adjust the logo size */
+            height: auto;
+        }
         main {
             padding: 20px;
         }
@@ -35,6 +39,7 @@
 </head>
 <body>
     <header>
+        <img src="cumilyeon.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
         <h1>Welcome to Cumilyeon</h1>
     </header>
     <main>
