--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             color: #333;
         }
         header {
-            background: #007bff;
-            color: white;
+            background: #000000;
+            color: black;
             padding: 10px 20px;
             text-align: center;
         }
