--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <header>
-        <img src="cumilyeon.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
+        <img src="Cumilyeon.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
         <h1>Welcome to Cumilyeon</h1>
     </header>
     <main>
