--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         header {
             background: #000000;
-            color: black;
+            color: white;
             padding: 10px 20px;
             text-align: center;
         }
