--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cumilyeon</title>
+    <title>Cumilyeon - Game Hosting Services</title>
     <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to a CSS file -->
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000000;
+            background-color: #f4f4f4;
             color: #333;
         }
         header {
-            background: #000000;
+            background: #007bff;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -35,26 +35,44 @@
             bottom: 0;
             width: 100%;
         }
+        .services {
+            margin-top: 20px;
+        }
+        .services ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .services li {
+            background: #e9ecef;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
     <header>
-        <img src="Cumilyeon.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
+        <img src="path/to/your/logo.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
         <h1>Welcome to Cumilyeon</h1>
     </header>
     <main>
         <h2>About Us</h2>
-        <p>Cumilyeon is your go-to place for [insert a brief description of your website or business].</p>
+        <p>Cumilyeon provides top-notch game hosting services, specializing in popular games such as Minecraft and various Steam titles. Experience reliable and high-performance servers tailored for gamers.</p>
         
-        <h2>Our Services</h2>
-        <ul>
-            <li>Service 1</li>
-            <li>Service 2</li>
-            <li>Service 3</li>
-        </ul>
+        <div class="services">
+            <h2>Our Game Hosting Services</h2>
+            <ul>
+                <li>Minecraft Hosting</li>
+                <li>Counter-Strike: Global Offensive Hosting</li>
+                <li>Rust Hosting</li>
+                <li>ARK: Survival Evolved Hosting</li>
+                <li>Terraria Hosting</li>
+                <li>Garry's Mod Hosting</li>
+            </ul>
+        </div>
         
         <h2>Contact Us</h2>
-        <p>Email us at: <a href="mailto:cumilyeon@hotmail.com">info@cumilyeon.com</a></p>
+        <p>Email us at: <a href="mailto:info@cumilyeon.com">info@cumilyeon.com</a></p>
     </main>
     <footer>
         <p>&copy; 2024 Cumilyeon. All rights reserved.</p>
