--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <header>
-        <img src="path/to/your/logo.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
+        <img src="cumilyeon.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
         <h1>Welcome to Cumilyeon</h1>
     </header>
     <main>
