--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <header>
         <img src="cumilyeon.png" alt="Cumilyeon Logo"> <!-- Replace with your logo path -->
-        <h1>Welcome to Cumilyeon</h1>
+        <h1>Welcome</h1>
     </header>
     <main>
         <h2>About Us</h2>
