--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         header {
-            background: #007bff;
+            background: #000000;
             color: white;
             padding: 10px 20px;
             text-align: center;
