--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background: #007bff;
+            background: #000000;
             color: white;
             position: relative;
             bottom: 0;
